# ConjecturingProvingLoop

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yaml
src/: Dockerfile  app.py  cmd_loop.py  commit.py  compare_libraries.py  count_theorems.py  diff_results.py  eval_NL.py  eval_library.py  eval_prover.py  eval_prover_2.py  generate.py  generate_libraries.sh  import_graph.dot  lean_client.py  main.py  proof_length_WC.py  proof_lengths.py  pyproject.toml  show_proof_length.py  simple_loop.py  solve_loop.py  without_context_CPL.py  without_context_SL.py
src/models/: __init__.py  entity.py  repository.py  service.py  test_repository.py
src/notions/: 20250221_161942.lean  20250221_163048.lean  P.lean  RegularOpen.lean  SemiOpen.lean
src/results/P/eval_result_2/: stats_o3.json
src/results/P_without_context/CPL/: 3000000_stats.json  3000000_theorems.json
src/results/P_without_context/SL/: 3000000_stats.json  3000000_theorems.json
src/results/eval_NL_result/: stats_gpt-4o.json  stats_o3.json
src/results/eval_NL_result/proofs_gpt-4o/: proof_0.txt  proof_1.txt  proof_10.txt  proof_11.txt  proof_12.txt  proof_13.txt  proof_14.txt  proof_15.txt  proof_2.txt  proof_3.txt  proof_4.txt  proof_5.txt  proof_6.txt  proof_7.txt  proof_8.txt  proof_9.txt
src/results/simple_loop/o3/: final_generated.lean  final_stats.json
src/results/with_stats/4ogen/: generated_29.lean  stats_0.json  stats_1.json  stats_10.json  stats_11.json  stats_12.json  stats_13.json  stats_14.json  stats_15.json  stats_16.json  stats_17.json  stats_18.json  stats_19.json  (+18 more)
(+9188 files in other folders)
